--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Ewout ter Haar</title>
-    <link rel="me" href="mastodon.social/@ewout" />
-    <link rel="me" href="pixelfed.social/@ewout" />
+    <a rel="me" href="https://mastodon.social/@ewout">Mastodon</a>
+    <link rel="me" href="https://pixelfed.social/@ewout" />
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
