Mastodon rel=me

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Ewout ter Haar</title>
-    <a rel="me" href="https://mastodon.social/@ewout">Mastodon</a>
+    <link rel="me" href="https://mastodon.social/@ewout" />
     <link rel="me" href="https://pixelfed.social/@ewout" />
     <link rel="stylesheet" href="style.css">
   </head>
