--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <ul>
       <li><a href="https://ewout.org/pendulo-interrompido/">Pêndulo Interrompido</a></li>
       <li><a href="https://atp.github.io/enem/">ENEM</a></li>
+      <li><a href="https://ewout.org/oficina2025/">Oficina Avaliação por Pares 2025</a></li>
     </ul>
   </body>
 </html>
